--- a/Bunk1.csproj
+++ b/Bunk1.csproj
@@ -22,6 +22,7 @@
     <ConsolePause>false</ConsolePause>
     <MtouchLink>None</MtouchLink>
     <MtouchDebug>true</MtouchDebug>
+    <MtouchI18n />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhoneSimulator' ">
     <DebugType>none</DebugType>
@@ -43,6 +44,9 @@
     <ConsolePause>false</ConsolePause>
     <MtouchDebug>true</MtouchDebug>
     <CodesignKey>iPhone Developer</CodesignKey>
+    <IpaPackageName>Bunk1</IpaPackageName>
+    <CodesignProvision>DE1093CF-81F4-46F3-8C9C-AD75D2D31108</CodesignProvision>
+    <MtouchI18n />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhone' ">
     <DebugType>none</DebugType>
@@ -51,7 +55,12 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
-    <CodesignKey>iPhone Developer</CodesignKey>
+    <CodesignKey>iPhone Developer: Agzam Ibragimov (V2GACTKP2D)</CodesignKey>
+    <BuildIpa>true</BuildIpa>
+    <IpaPackageName>Bunk1 mobile</IpaPackageName>
+    <MtouchI18n />
+    <CodesignProvision>DE1093CF-81F4-46F3-8C9C-AD75D2D31108</CodesignProvision>
+    <IpaMetadata>none</IpaMetadata>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -59,6 +68,7 @@
     <Reference Include="System.Core" />
     <Reference Include="monotouch" />
     <Reference Include="System.Json" />
+    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Info.plist" />
@@ -88,11 +98,17 @@
     <Compile Include="Screens\SendingOptionsScreen.cs" />
     <Compile Include="Screens\ChooseCabinScreen.cs" />
     <Compile Include="Screens\AddNewCamperScreen.cs" />
-    <Compile Include="Helpers\StyledStringElementWithId.cs" />
+    <Compile Include="Screens\ComposeMessageScreen.cs" />
+    <Compile Include="Helpers\Camera.cs" />
+    <Compile Include="Rest\CreateBunkNoteResult.cs" />
+    <Compile Include="Rest\ImageUploadResult.cs" />
+    <Compile Include="Helpers\Reachability.cs" />
+    <Compile Include="Helpers\Elements.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
     <InterfaceDefinition Include="MainWindow.xib" />
+    <InterfaceDefinition Include="deleteThat.xib" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Images\" />
@@ -107,6 +123,15 @@
     <Content Include="Images\bunk1background.jpg" />
     <Content Include="Images\bunk1background%402x.jpg" />
     <Content Include="Images\bridge.jpg" />
+    <Content Include="Images\camperIcon.png" />
+    <Content Include="Images\icon.png" />
+    <Content Include="Images\Itunes.png" />
+    <Content Include="Images\camIcon.png" />
+    <Content Include="Images\camperIcon%402x.png" />
+    <Content Include="Images\icon%402x.png" />
+    <Content Include="Images\camIcon%402x.png" />
+    <Content Include="Images\sendBtn.png" />
+    <Content Include="Images\sendBtn%402x.png" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\RestSharp\RestSharp.MonoTouch\RestSharp.MonoTouch.csproj">
