--- a/Info.plist
+++ b/Info.plist
@@ -2,11 +2,31 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CFBundleDisplayName</key>
+	<string>Bunk1</string>
+	<key>CFBundleIconFiles</key>
+	<array>
+		<string>Images/icon.png</string>
+		<string>Images/icon@2x.png</string>
+		<string>Images/Itunes.png</string>
+	</array>
+	<key>CFBundleIdentifier</key>
+	<string>com.bunk1.bunk1</string>
+	<key>CFBundleVersion</key>
+	<string>1.0</string>
 	<key>MinimumOSVersion</key>
 	<string>4.3</string>
 	<key>NSMainNibFile</key>
 	<string>MainWindow</string>
+	<key>UIDeviceFamily</key>
+	<array>
+		<string>1</string>
+	</array>
 	<key>UISupportedInterfaceOrientations</key>
-	<array/>
+	<array>
+		<string>UIInterfaceOrientationPortrait</string>
+		<string>UIInterfaceOrientationLandscapeLeft</string>
+		<string>UIInterfaceOrientationLandscapeRight</string>
+	</array>
 </dict>
 </plist>
