--- a/Bunk1.csproj
+++ b/Bunk1.csproj
@@ -120,8 +120,6 @@
     <Folder Include="Screens\" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Images\bunk1background.jpg" />
-    <Content Include="Images\bunk1background%402x.jpg" />
     <Content Include="Images\camperIcon.png" />
     <Content Include="Images\icon.png" />
     <Content Include="Images\Itunes.png" />
@@ -131,15 +129,22 @@
     <Content Include="Images\camIcon%402x.png" />
     <Content Include="Images\sendBtn.png" />
     <Content Include="Images\sendBtn%402x.png" />
+    <Content Include="Images\sun.png" />
+    <Content Include="Images\sun%402x.png" />
+    <Content Include="Images\testPattern.jpg" />
+    <Content Include="Images\background.jpg" />
+    <Content Include="Images\background%402x.jpg" />
+    <Content Include="Images\backgroundLandscape.jpg" />
+    <Content Include="Images\backgroundLandscape%402x.jpg" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\RestSharp\RestSharp.MonoTouch\RestSharp.MonoTouch.csproj">
-      <Project>{E9A9D1C5-4E06-4D31-9809-A97188C70B2C}</Project>
-      <Name>RestSharp.MonoTouch</Name>
-    </ProjectReference>
     <ProjectReference Include="..\..\MonoTouch.Dialog\MonoTouch.Dialog\MonoTouch.Dialog.csproj">
       <Project>{3FFBFFF8-5560-4EDE-82E5-3FFDFBBA8A50}</Project>
       <Name>MonoTouch.Dialog</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\RestSharp\RestSharp.MonoTouch\RestSharp.MonoTouch.csproj">
+      <Project>{E9A9D1C5-4E06-4D31-9809-A97188C70B2C}</Project>
+      <Name>RestSharp.MonoTouch</Name>
     </ProjectReference>
   </ItemGroup>
 </Project>
